--- a/src/components/header/TheHeader/TheHeader.scss
+++ b/src/components/header/TheHeader/TheHeader.scss
@@ -2806,3 +2806,10 @@
     margin-right: -70px;
   }
 }
+.main-header-wrap .intelligent-header .header-middle.header-transform {
+  background: transparent;
+}
+
+.main-header-wrap .site-header-outer .intelligent-header.header-transform {
+  background: transparent !important;
+}
